// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Different ways to make an equation All Text in constructor with all options 1`] = `
FigureElementPrimitive2DText {
  "_custom": {},
  "afterDrawCallback": null,
  "allowSetColor": "all",
  "angleToDraw": -1,
  "animationFinishedCallback": null,
  "animations": AnimationManager {
    "animationSpeed": 1,
    "animations": [],
    "customSteps": [],
    "element": [Circular],
    "finishedCallback": [Function],
    "fnMap": FunctionMap {
      "global": GlobalFunctionMap {
        "map": {},
      },
      "map": {},
    },
    "notifications": NotificationManager {
      "fnMap": FunctionMap {
        "global": GlobalFunctionMap {
          "map": {},
        },
        "map": {},
      },
      "notifications": {
        "frame": Notification {
          "fnMap": FunctionMap {
            "global": GlobalFunctionMap {
              "map": {},
            },
            "map": {},
          },
          "nextId": 1,
          "order": [
            "0",
          ],
          "subscribers": {
            "0": {
              "callback": [Function],
              "num": -1,
            },
          },
        },
      },
    },
    "options": {
      "translation": {},
    },
    "recorder": undefined,
    "state": "idle",
    "timeKeeper": TimeKeeper {
      "animateOnFrame": false,
      "drawQueue": [],
      "idCounter": 0,
      "lastDrawTime": null,
      "lastTime": 0,
      "manual": false,
      "nextDrawQueue": [],
      "nowTime": 0,
      "requestNextAnimationFrame": [MockFunction] {
        "calls": [
          [
            [Function],
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "speed": 1,
      "syncNowTimeout": 100,
      "timeoutId": null,
      "timers": {},
      "updateSyncNow": true,
    },
  },
  "beforeDrawCallback": null,
  "border": "draw",
  "cancelSetTransform": false,
  "cannotTouchHole": false,
  "color": [
    0.95,
    0,
    0,
    1,
  ],
  "copyTransforms": [],
  "custom": {},
  "customState": {},
  "defaultColor": [
    0.95,
    0,
    0,
    1,
  ],
  "dependantTransform": false,
  "dimColor": [
    0.5,
    0.5,
    0.5,
    1,
  ],
  "drawBorder": [
    [
      Point {
        "_type": "point",
        "x": 0,
        "y": -0.008,
        "z": 0,
      },
      Point {
        "_type": "point",
        "x": 0.1,
        "y": -0.008,
        "z": 0,
      },
      Point {
        "_type": "point",
        "x": 0.1,
        "y": 0.11,
        "z": 0,
      },
      Point {
        "_type": "point",
        "x": 0,
        "y": 0.11,
        "z": 0,
      },
    ],
  ],
  "drawBorderBuffer": [
    [
      Point {
        "_type": "point",
        "x": 0,
        "y": -0.008,
        "z": 0,
      },
      Point {
        "_type": "point",
        "x": 0.1,
        "y": -0.008,
        "z": 0,
      },
      Point {
        "_type": "point",
        "x": 0.1,
        "y": 0.11,
        "z": 0,
      },
      Point {
        "_type": "point",
        "x": 0,
        "y": 0.11,
        "z": 0,
      },
    ],
  ],
  "drawNumber": 0,
  "drawPriority": 1,
  "drawTransforms": [],
  "drawingObject": TextObject {
    "adjustments": {
      "ascent": 0,
      "descent": 0,
      "width": 0,
    },
    "alignedLocation": [
      Point {
        "_type": "point",
        "x": 0,
        "y": 0,
        "z": 0,
      },
    ],
    "bounds": Rect {
      "bottom": -0.008,
      "height": 0.118,
      "left": 0,
      "right": 0.1,
      "top": 0.10999999999999999,
      "width": 0.1,
    },
    "drawContext2D": DrawContext2D {
      "canvas": {
        "height": 1000,
        "offsetHeight": 500,
        "offsetWidth": 1000,
        "style": {
          "height": "500px",
          "width": "1000px",
        },
        "width": 2000,
      },
      "ctx": {
        "canvas": {
          "height": 500,
          "width": 1000,
        },
        "clearRect": [Function],
        "fillText": [Function],
        "filledText": {
          "count": 0,
          "text": "",
          "x": null,
          "y": null,
        },
        "font": "italic 200 20px Times New Roman",
        "measureText": [Function],
        "restore": [Function],
        "save": [Function],
        "scale": [Function],
        "textAlign": [Function],
        "textBaseline": [Function],
        "transform": [Function],
        "transformMatrix": [
          1,
          0,
          0,
          1,
          0,
          0,
        ],
      },
      "ratio": 2,
      "resize": [Function],
    },
    "font": FigureFont {
      "atlasColor": false,
      "atlasSize": null,
      "color": [
        0.95,
        0,
        0,
        1,
      ],
      "descent": 0.08,
      "family": "Times New Roman",
      "glyphs": "mathlatin",
      "id": undefined,
      "letterSpacing": 0,
      "loadColor": [
        0,
        0,
        0,
        0,
      ],
      "map": {},
      "maxAscent": 1.5,
      "maxCount": 1,
      "maxDescent": 0.5,
      "midAscent": 1.1,
      "midDescent": 0.2,
      "modifiers": {},
      "mods": {
        " ": {
          "a": 1.1,
          "d": 0.08,
          "w": 1,
        },
        "$": {
          "a": 1.5,
          "d": 0.2,
          "w": 1,
        },
        "(": {
          "a": 1.5,
          "d": 0.5,
          "w": 1,
        },
        ")": {
          "a": 1.5,
          "d": 0.5,
          "w": 1,
        },
        "*": {
          "a": 1.1,
          "d": 0.08,
          "w": 1,
        },
        ",": {
          "a": 1.1,
          "d": 0.2,
          "w": 1,
        },
        "-": {
          "a": 1.1,
          "d": 0.08,
          "w": 1,
        },
        ":": {
          "a": 1.1,
          "d": 0.08,
          "w": 1,
        },
        ";": {
          "a": 1.1,
          "d": 0.2,
          "w": 1,
        },
        "@": {
          "a": 1.5,
          "d": 0.5,
          "w": 1,
        },
        "Q": {
          "a": 1.5,
          "d": 0.5,
          "w": 1,
        },
        "[": {
          "a": 1.5,
          "d": 0.5,
          "w": 1,
        },
        "]": {
          "a": 1.5,
          "d": 0.5,
          "w": 1,
        },
        "a": {
          "a": 1.1,
          "d": 0.08,
          "w": 1,
        },
        "c": {
          "a": 1.1,
          "d": 0.08,
          "w": 1,
        },
        "e": {
          "a": 1.1,
          "d": 0.08,
          "w": 1,
        },
        "f": {
          "a": 1.5,
          "d": 0.5,
          "w": 1.3,
        },
        "g": {
          "a": 1.1,
          "d": 0.5,
          "w": 1,
        },
        "j": {
          "a": 1.5,
          "d": 0.5,
          "w": 1,
        },
        "m": {
          "a": 1.1,
          "d": 0.08,
          "w": 1,
        },
        "n": {
          "a": 1.1,
          "d": 0.08,
          "w": 1,
        },
        "o": {
          "a": 1.1,
          "d": 0.08,
          "w": 1,
        },
        "p": {
          "a": 1.1,
          "d": 0.5,
          "w": 1,
        },
        "q": {
          "a": 1.1,
          "d": 0.5,
          "w": 1,
        },
        "r": {
          "a": 1.1,
          "d": 0.08,
          "w": 1,
        },
        "s": {
          "a": 1.1,
          "d": 0.08,
          "w": 1,
        },
        "u": {
          "a": 1.1,
          "d": 0.08,
          "w": 1,
        },
        "v": {
          "a": 1.1,
          "d": 0.08,
          "w": 1,
        },
        "w": {
          "a": 1.1,
          "d": 0.08,
          "w": 1,
        },
        "x": {
          "a": 1.1,
          "d": 0.08,
          "w": 1,
        },
        "y": {
          "a": 1.1,
          "d": 0.5,
          "w": 1,
        },
        "z": {
          "a": 1.1,
          "d": 0.08,
          "w": 1,
        },
        "{": {
          "a": 1.5,
          "d": 0.5,
          "w": 1,
        },
        "|": {
          "a": 1.5,
          "d": 0.5,
          "w": 1,
        },
        "}": {
          "a": 1.5,
          "d": 0.5,
          "w": 1,
        },
      },
      "opacity": 1,
      "outline": {
        "fill": true,
        "width": 0,
      },
      "render": "2d",
      "size": 0.2,
      "src": "",
      "style": "italic",
      "testString": "mathlatin",
      "timeout": 5,
      "underline": false,
      "weight": "200",
    },
    "lastDraw": [],
    "lastDrawTransform": [
      1,
      0,
      0,
      0,
      1,
      0,
      0,
      0,
      1,
    ],
    "location": [
      Point {
        "_type": "point",
        "x": 0,
        "y": 0,
        "z": 0,
      },
    ],
    "measure": {
      "ascent": 0.11,
      "border": [
        [
          Point {
            "_type": "point",
            "x": 0,
            "y": -0.008,
            "z": 0,
          },
          Point {
            "_type": "point",
            "x": 0.1,
            "y": -0.008,
            "z": 0,
          },
          Point {
            "_type": "point",
            "x": 0.1,
            "y": 0.11,
            "z": 0,
          },
          Point {
            "_type": "point",
            "x": 0,
            "y": 0.11,
            "z": 0,
          },
        ],
      ],
      "bottom": -0.008,
      "descent": 0.008,
      "left": 0,
      "right": 0.1,
      "top": 0.11,
      "width": 0.1,
    },
    "measurements": [
      {
        "bottom": -0.008,
        "left": 0,
        "right": 0.1,
        "top": 0.11,
      },
    ],
    "scalingFactor": 100,
    "text": [
      "a",
    ],
    "textBorder": [
      [
        Point {
          "_type": "point",
          "x": 0,
          "y": -0.008,
          "z": 0,
        },
        Point {
          "_type": "point",
          "x": 0.1,
          "y": -0.008,
          "z": 0,
        },
        Point {
          "_type": "point",
          "x": 0.1,
          "y": 0.11,
          "z": 0,
        },
        Point {
          "_type": "point",
          "x": 0,
          "y": 0.11,
          "z": 0,
        },
      ],
    ],
    "type": "drawingObject",
    "xAlign": "left",
    "yAlign": "baseline",
  },
  "fnMap": FunctionMap {
    "global": GlobalFunctionMap {
      "map": {},
    },
    "map": {
      "_elementPulseSettingsTransformMethod": {
        "fn": [Function],
      },
      "tools.math.easeinout": {
        "fn": [Function],
      },
      "tools.math.linear": {
        "fn": [Function],
      },
      "tools.math.sinusoid": {
        "fn": [Function],
      },
      "tools.math.sinusoidAbs": {
        "fn": [Function],
      },
      "tools.math.triangle": {
        "fn": [Function],
      },
    },
  },
  "frozenPulseTransforms": [],
  "interactiveLocation": Point {
    "_type": "point",
    "x": 0,
    "y": 0,
    "z": 0,
  },
  "internalSetTransformCallback": null,
  "isInteractive": undefined,
  "isMovable": false,
  "isRenderedAsImage": false,
  "isShown": true,
  "isTouchable": false,
  "lastDrawOpacity": 1,
  "lastDrawPulseTransform": Transform {
    "_type": "transform",
    "def": [
      [
        "s",
        1,
        1,
        1,
      ],
      [
        "r",
        0,
        0,
        0,
        1,
      ],
      [
        "t",
        0,
        0,
        0,
      ],
    ],
    "mat": [
      1,
      0,
      0,
      0,
      0,
      1,
      0,
      0,
      0,
      0,
      1,
      0,
      0,
      0,
      0,
      1,
    ],
  },
  "lastDrawTime": 0,
  "lengthToDraw": -1,
  "move": {
    "bounds": null,
    "element": null,
    "freely": {
      "bounceLoss": 0.5,
      "callback": null,
      "deceleration": 5,
      "zeroVelocityThreshold": 0.0001,
    },
    "maxVelocity": 5,
    "plane": Plane {
      "n": Point {
        "_type": "point",
        "x": 0,
        "y": 0,
        "z": 1,
      },
      "p": Point {
        "_type": "point",
        "x": 0,
        "y": 0,
        "z": 0,
      },
    },
    "type": "translation",
  },
  "moveSetTransform": false,
  "name": "a",
  "notifications": NotificationManager {
    "fnMap": FunctionMap {
      "global": GlobalFunctionMap {
        "map": {},
      },
      "map": {
        "_elementPulseSettingsTransformMethod": {
          "fn": [Function],
        },
        "tools.math.easeinout": {
          "fn": [Function],
        },
        "tools.math.linear": {
          "fn": [Function],
        },
        "tools.math.sinusoid": {
          "fn": [Function],
        },
        "tools.math.sinusoidAbs": {
          "fn": [Function],
        },
        "tools.math.triangle": {
          "fn": [Function],
        },
      },
    },
    "notifications": {},
  },
  "onAdd": null,
  "onClick": null,
  "opacity": 1,
  "parent": null,
  "parentTransform": [
    Transform {
      "_type": "transform",
      "def": [],
      "mat": [
        1,
        0,
        0,
        0,
        0,
        1,
        0,
        0,
        0,
        0,
        1,
        0,
        0,
        0,
        0,
        1,
      ],
    },
  ],
  "pointsDefinition": {},
  "pointsToDraw": -1,
  "pulseDefault": {
    "angle": 0,
    "centerOn": "this",
    "done": null,
    "duration": 1,
    "frequency": 0,
    "num": 1,
    "progression": "sinusoid",
    "rotation": null,
    "scale": 2,
    "space": "figure",
    "translation": null,
    "when": "syncNow",
    "xAlign": "center",
    "yAlign": "middle",
  },
  "pulseSettings": {
    "A": 1,
    "B": 0.5,
    "C": 0,
    "allowFreezeOnStop": false,
    "callback": [Function],
    "delta": Point {
      "_type": "point",
      "x": 0,
      "y": 0,
      "z": 0,
    },
    "frequency": 0.5,
    "num": 1,
    "progression": "tools.math.sinusoid",
    "time": 1,
    "transformMethod": "_elementPulseSettingsTransformMethod",
    "type": "scale",
  },
  "pulseTransforms": [],
  "recorder": Recorder {
    "audio": null,
    "currentTime": 0,
    "duration": 0,
    "eventIndex": {
      "_autoCursor": -1,
      "_autoCursorMove": -1,
      "_autoExec": -1,
      "_autoTouch": -1,
      "_autoTouchElement": -1,
      "cursor": -1,
      "cursorMove": -1,
      "exec": -1,
      "touch": -1,
      "touchElement": -1,
    },
    "events": {
      "_autoCursor": {
        "list": [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
      "_autoCursorMove": {
        "list": [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
      "_autoExec": {
        "list": [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
      "_autoTouch": {
        "list": [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
      "_autoTouchElement": {
        "list": [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
      "cursor": {
        "list": [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
      "cursorMove": {
        "list": [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
      "exec": {
        "list": [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
      "touch": {
        "list": [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
      "touchElement": {
        "list": [],
        "playbackAction": [Function],
        "setOnSeek": true,
      },
    },
    "eventsCache": {},
    "eventsToPlay": [],
    "figure": null,
    "isAudioPlaying": false,
    "lastRecordTime": null,
    "lastRecordTimeCount": 0,
    "lastSeekTime": null,
    "notifications": NotificationManager {
      "fnMap": FunctionMap {
        "global": GlobalFunctionMap {
          "map": {},
        },
        "map": {},
      },
      "notifications": {},
    },
    "pauseState": null,
    "precision": 8,
    "queueSeekId": null,
    "queueSeekTime": 0,
    "reference": "__base",
    "referenceIndex": 0,
    "settings": {
      "pause": "freeze",
      "play": "instant",
    },
    "state": "idle",
    "stateIndex": -1,
    "stateTimeStep": 1,
    "states": ObjectTracker {
      "baseReference": null,
      "diffs": [],
      "lastReferenceName": "__base",
      "precision": 8,
      "references": {},
    },
    "statesCache": ObjectTracker {
      "baseReference": null,
      "diffs": [],
      "lastReferenceName": "__base",
      "precision": 8,
      "references": {},
    },
    "timeKeeper": TimeKeeper {
      "animateOnFrame": false,
      "animationId": undefined,
      "drawQueue": [],
      "idCounter": 0,
      "lastDrawTime": null,
      "lastTime": 0,
      "manual": false,
      "nextDrawQueue": [],
      "nowTime": 0,
      "requestNextAnimationFrame": [MockFunction] {
        "calls": [
          [
            [Function],
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "speed": 1,
      "syncNowTimeout": 100,
      "timeoutId": null,
      "timers": {},
      "updateSyncNow": true,
    },
    "timeUpdates": 100,
    "timeUpdatesTimeoutID": null,
    "timeoutID": null,
    "videoToNowDelta": 0,
    "worker": null,
  },
  "renderedOnNextDraw": false,
  "scenarios": {},
  "scene": Scene {
    "aspectRatio": 0,
    "bottom": -1,
    "camera": {
      "lookAt": Point {
        "_type": "point",
        "x": 0,
        "y": 0,
        "z": 0,
      },
      "position": Point {
        "_type": "point",
        "x": 0,
        "y": 0,
        "z": 2,
      },
      "up": Point {
        "_type": "point",
        "x": 0,
        "y": 1,
        "z": 0,
      },
    },
    "cameraMatrix": [
      1,
      0,
      0,
      0,
      0,
      1,
      0,
      0,
      0,
      0,
      1,
      2,
      0,
      0,
      0,
      1,
    ],
    "cameraPosition": Point {
      "_type": "point",
      "x": 0,
      "y": 0,
      "z": 2,
    },
    "cameraVector": Point {
      "_type": "point",
      "x": 0,
      "y": 0,
      "z": -1,
    },
    "far": 10,
    "farCenter": Point {
      "_type": "point",
      "x": 0,
      "y": 0,
      "z": -8,
    },
    "farPlane": Plane {
      "n": Point {
        "_type": "point",
        "x": 0,
        "y": 0,
        "z": -1,
      },
      "p": Point {
        "_type": "point",
        "x": 0,
        "y": 0,
        "z": -8,
      },
    },
    "fieldOfView": 0.47123889803846897,
    "heightFar": 2,
    "heightNear": 2,
    "inverseViewProjectionMatrix": [
      1,
      0,
      0,
      0,
      0,
      1,
      0,
      0,
      -0,
      -0,
      -4.95,
      -3.05,
      0,
      0,
      0,
      1,
    ],
    "left": -1,
    "light": {
      "ambient": 0.4,
      "directional": Point {
        "_type": "point",
        "x": 1,
        "y": 1,
        "z": 1,
      },
      "point": Point {
        "_type": "point",
        "x": 10,
        "y": 10,
        "z": 10,
      },
    },
    "near": 0.1,
    "nearCenter": Point {
      "_type": "point",
      "x": 0,
      "y": 0,
      "z": 1.9,
    },
    "nearPlane": Plane {
      "n": Point {
        "_type": "point",
        "x": 0,
        "y": 0,
        "z": -1,
      },
      "p": Point {
        "_type": "point",
        "x": 0,
        "y": 0,
        "z": 1.9,
      },
    },
    "onUpdate": null,
    "pan": Point {
      "_type": "point",
      "x": 0,
      "y": 0,
      "z": 0,
    },
    "pannedCameraPosition": Point {
      "_type": "point",
      "x": 0,
      "y": 0,
      "z": 2,
    },
    "pannedLookAt": Point {
      "_type": "point",
      "x": 0,
      "y": 0,
      "z": 0,
    },
    "projectionMatrix": [
      1,
      0,
      0,
      -0,
      0,
      1,
      0,
      -0,
      0,
      0,
      -0.20202020202020202,
      -1.02020202020202,
      0,
      0,
      0,
      1,
    ],
    "right": 1,
    "rightVector": Point {
      "_type": "point",
      "x": 1,
      "y": -0,
      "z": 0,
    },
    "style": "2D",
    "top": 1,
    "upVector": Point {
      "_type": "point",
      "x": 0,
      "y": 1,
      "z": 0,
    },
    "viewMatrix": [
      1,
      0,
      0,
      0,
      0,
      1,
      0,
      0,
      0,
      0,
      1,
      -2,
      0,
      0,
      0,
      1,
    ],
    "viewProjectionMatrix": [
      1,
      0,
      0,
      0,
      0,
      1,
      0,
      0,
      0,
      0,
      -0.20202020202020202,
      0,
      0,
      0,
      0,
      1,
    ],
    "widthFar": 2,
    "widthNear": 2,
    "zoom": 1,
  },
  "setPointsFromDefinition": null,
  "setTransformCallback": null,
  "simple": false,
  "state": {
    "isBeingMoved": false,
    "isChanging": false,
    "isMovingFreely": false,
    "isPulsing": false,
    "movement": {
      "previousTime": null,
      "velocity": 0,
    },
    "preparingToStop": false,
    "pulse": {
      "startTime": null,
    },
  },
  "stateProperties": [],
  "tieToHTML": {
    "element": null,
    "scale": "fit",
    "updateOnResize": true,
    "window": Rect {
      "bottom": -1,
      "height": 2,
      "left": -1,
      "right": 1,
      "top": 1,
      "width": 2,
    },
  },
  "timeKeeper": TimeKeeper {
    "animateOnFrame": false,
    "animationId": undefined,
    "drawQueue": [],
    "idCounter": 0,
    "lastDrawTime": null,
    "lastTime": 0,
    "manual": false,
    "nextDrawQueue": [],
    "nowTime": 0,
    "requestNextAnimationFrame": [MockFunction] {
      "calls": [
        [
          [Function],
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": undefined,
        },
      ],
    },
    "speed": 1,
    "syncNowTimeout": 100,
    "timeoutId": null,
    "timers": {},
    "updateSyncNow": true,
  },
  "touchBorder": "buffer",
  "touchScale": Point {
    "_type": "point",
    "x": 1,
    "y": 1,
    "z": 1,
  },
  "transform": Transform {
    "_type": "transform",
    "def": [
      [
        "s",
        0.45,
        0.45,
        1,
      ],
      [
        "r",
        0,
        0,
        0,
        1,
      ],
      [
        "t",
        1.865,
        1.9325,
        0,
      ],
    ],
    "mat": [
      0.45,
      0,
      0,
      1.865,
      0,
      0.45,
      0,
      1.9325,
      0,
      0,
      1,
      0,
      0,
      0,
      0,
      1,
    ],
  },
  "type": "primitive",
  "uid": "0000000000",
  "uniqueColor": null,
  "unrenderNextDraw": false,
}
`;

exports[`Different ways to make an equation Separate All Text 1`] = `
[
  0.7,
  0,
  0,
  0.035,
  0,
  0.7,
  0,
  0.0996,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Different ways to make an equation Separate All Text 2`] = `
[
  0.7,
  0,
  0,
  0.035,
  0,
  0.7,
  0,
  -0.091,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Different ways to make an equation Separate All Text 3`] = `
[
  0.14,
  0,
  0,
  0,
  0,
  0.01,
  0,
  0.049,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;

exports[`Different ways to make an equation Separate All Text 4`] = `
[
  0.7,
  0,
  0,
  0.14,
  0,
  0.7,
  0,
  0,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  1,
]
`;
